--- a/index.html
+++ b/index.html
@@ -22,28 +22,30 @@
     <section>
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <div><select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+        <div class="filter-dropdown">
+        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
-        </select></div>
-        <div><select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+        </select>
+        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
-        </select></div>
+        </select>
+      </div>
       </div>
       <div>
         <ul id="restaurants-list"></ul>
       </div>
     </section>
   </main>
-
+  <footer id="footer">
+    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+  </footer>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmC_afxSN_iOPNJWIR84B5d3EM4j7EdXA&callback=initMap"
   type="text/javascript"></script>
 
 
-  <footer id="footer">
-    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
-  </footer>
+  
 
 </body>
 
